tests/Not/fail/emptynot.stderr
error: expected attribute arguments in parentheses: #[not(...)]
 --> tests/Not/fail/emptynot.rs:5:5
  |
5 |     #[not]
  |     ^^^^^^
